--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ oauthlib==3.2.1
 packaging==21.3
 Pillow==9.2.0
 prompt-toolkit==3.0.31
+psycopg2-binary==2.9.4
 pycparser==2.21
 PyJWT==2.5.0
 pyparsing==3.0.9
