--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ requests==2.28.1
 requests-oauthlib==1.3.1
 six==1.16.0
 sqlparse==0.4.3
+stripe==4.2.0
 types-cryptography==3.3.23
 urllib3==1.26.12
 vine==5.0.0
